[gd_scene load_steps=11 format=2]

[ext_resource path="res://Objetos/Scripts/Gui.gd" type="Script" id=1]
[ext_resource path="res://Objetos/sprites/Mage.png" type="Texture" id=2]
[ext_resource path="res://Objetos/System/Gui_theme.tres" type="Theme" id=3]
[ext_resource path="res://Objetos/Scripts/Minimap.gd" type="Script" id=4]
[ext_resource path="res://Objetos/sprites/sblmark/sbl0.png" type="Texture" id=5]
[ext_resource path="res://Objetos/sprites/sblmark/sbl3.png" type="Texture" id=6]
[ext_resource path="res://Objetos/sprites/cardinal.png" type="Texture" id=7]
[ext_resource path="res://Themes/ArcadeTheme.tres" type="Theme" id=8]
[ext_resource path="res://Objetos/sprites/relog.png" type="Texture" id=9]

[sub_resource type="StreamTexture" id=1]

flags = 4
load_path = "res://.import/Target.png-c0e508007a94a47dd902fd17da49f664.stex"

[node name="Container" type="Container"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_bottom = 122.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 1 )
Ul_spr = ExtResource( 2 )

[node name="Panel" type="ColorRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.113281, 0.0508881, 0.0508881, 0.618784 )
_sections_unfolded = [ "Anchor", "Margin", "Rect" ]

[node name="Minimap" type="Container" parent="." index="1"]

modulate = Color( 1, 1, 1, 0.705882 )
self_modulate = Color( 1, 1, 1, 0.705882 )
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = -224.0
margin_top = 20.0
margin_right = -24.0
margin_bottom = 220.0
rect_pivot_offset = Vector2( 60, 60 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 3 )
script = ExtResource( 4 )
_sections_unfolded = [ "Material", "Size Flags", "Theme", "Visibility" ]
spr = ExtResource( 5 )
pspr = ExtResource( 2 )
bspr = ExtResource( 6 )

[node name="Sprite" type="TextureRect" parent="Minimap" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 200.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 200 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 7 )
stretch_mode = 0
_sections_unfolded = [ "Offset", "Rect" ]

[node name="Level" type="Label" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 481.0
margin_top = 17.0
margin_right = 601.0
margin_bottom = 50.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = ExtResource( 8 )
custom_colors/font_color = Color( 0.960938, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "Level:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Hint", "Theme", "custom_colors", "custom_fonts", "custom_styles" ]

[node name="Score" type="Label" parent="." index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 620.0
margin_top = 15.0
margin_right = 778.0
margin_bottom = 84.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = ExtResource( 8 )
text = "Score :
"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "Theme" ]

[node name="Time" type="HBoxContainer" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 229.0
margin_top = 16.0
margin_right = 329.0
margin_bottom = 49.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Margin" ]

[node name="TextureRect" type="TextureRect" parent="Time" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 32.0
margin_bottom = 33.0
rect_min_size = Vector2( 32, 32 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 9 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Rect" ]

[node name="timeLeftLbl" type="Label" parent="Time" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 36.0
margin_right = 100.0
margin_bottom = 33.0
rect_min_size = Vector2( 64, 24 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = ExtResource( 8 )
text = "Time"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "Rect" ]

[node name="NextLevelInfo" type="HBoxContainer" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 369.0
margin_top = 16.0
margin_right = 465.0
margin_bottom = 49.0
rect_min_size = Vector2( 96, 32 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Rect" ]

[node name="TextureRect" type="TextureRect" parent="NextLevelInfo" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 24.0
margin_bottom = 33.0
rect_min_size = Vector2( 24, 24 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = SubResource( 1 )
expand = true
stretch_mode = 6
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect" ]

[node name="dataNextLbl" type="Label" parent="NextLevelInfo" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 28.0
margin_right = 92.0
margin_bottom = 33.0
rect_min_size = Vector2( 64, 24 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = ExtResource( 8 )
text = "0/0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "Rect" ]

[node name="Lifebar" type="Container" parent="." index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 84.0
margin_top = 18.0
margin_right = 84.0
margin_bottom = 59.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Label" type="Label" parent="Lifebar" index="0"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -78.0
margin_right = -4.0
margin_bottom = 33.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
theme = ExtResource( 8 )
text = "Lives:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Theme", "custom_colors", "custom_constants", "custom_fonts", "custom_styles" ]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="." index="7"]

stream = null
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"


